--- a/q7/index.html
+++ b/q7/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <video width="1280" height="220" controls>
+      <video class="vid" width="1280" height="220" controls>
         <source
           src="video/Masih & Arash AP - Shah Beyt 480p_RozMusic.mp4"
           type="video/mp4"
