--- a/q6/index.html
+++ b/q6/index.html
@@ -67,14 +67,14 @@
         ></textarea>
       </div>
 
-      <label
-        for="email"
-        class="email"
+      <label for="email" class="email"> Email</label>
+      <input
+        type="text"
+        name="email"
+        id="email"
+        placeholder="Enter Email"
         pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
-      >
-        Email</label
-      >
-      <input type="text" name="email" id="email" placeholder="Enter Email" />
+      />
 
       <label for="pass" class="pass">Password</label>
       <input
@@ -94,6 +94,6 @@
 
       <button type="submit" id="btn" class="btn-reg">Register</button>
     </form>
-    
+    <script src="script.js"></script>
   </body>
 </html>
